# mekanik-kuantum

./: .gitignore  .mdformat.toml  .nojekyll  .pre-commit-config.yaml  00A-Daftar-Pemalar.Rmd  01-Malapetaka-Ultralembayung.Rmd  01-Malapetaka-Ultralembayung.md  02-Kedualan-Gelombang-Zarah.Rmd  02-fungsi-gelombang.Rmd  03-Fungsi-Gelombang.Rmd  03-schrodinger.Rmd  A0-daftar-pemalar.Rmd  A0-daftar-pustaka.Rmd  A1-kamus.Rmd  AA-daftar-pustaka.Rmd  CONTRIBUTING.md  Catatan-Mekanik-Kuantum.aux  Catatan-Mekanik-Kuantum.tex  README.md  _bookdown.yml  _output.yml  analytics.html  book.bib  header.html  index.Rmd  index.html  istilah-kuantum.json  kamus.txt  packages.bib  prakata.html  preamble.tex  proses_istilah.py  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  style.css
_snippets/: kofi.html
book/: _config.yml  _quarto.yml  _toc.yml  eksperimen.md  gelombang.md  hidrogen.md  index.md  index.qmd  penyelesaian.md  references.bib  schroedinger.md  sinaran-jasad-hitam.md  sinaran-jasad-hitam.qmd  styles.css
docs/: 00A-Daftar-Pemalar.md  01-Malapetaka-Ultralembayung.html  01-Malapetaka-Ultralembayung.md  01-penulis.md  02-Kedualan-Gelombang-Zarah.md  02-fungsi-gelombang.md  03-Fungsi-Gelombang.md  1-1-sinaran-jasad-hitam.html  1-2-cubaan-wein-rayleigh-dan-jeans.html  1-2-sec-wien-rayleigh-jeans.html  1-3-postulat-planck-tentang-sekuanta-tenaga.html  1-3-postulat-planck-tentang-sekuantum-tenaga.html  1-3-sec-postulat-planck.html  1-4-kesinambungan-persamaan-planck-dengan-usaha-sebelumnya.html  1-4-sec-kesinambungan.html  1-5-mu-5.html  1-5-pelbagai-bentuk-persamaan-planck.html  1-5-sec-bentuk-pers-planck.html  1-5-sec-mu-5.html  1-malapetaka-ultralembayung.html  2-1-apa-itu-gelombang.html  2-1-bulatan-unit-fungsi-trigonometri.html  (+36 more)
(+134 files in other folders)
