[tool.poetry]
name = "mekanik-kuantum"
version = "0.1.0"
description = ""
authors = ["Thaza_Kun <61819672+Thaza-Kun@users.noreply.github.com>"]
packages = [
    { include = "scripts" }
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23"
ghp-import = "^2.1.0"
sphinx-proof = "^0.1.3"
jupyter-book = "^0.13.1"
seaborn = "^0.12.1"
pandas = "^1.5.1"
ipympl = "^0.9.2"

[tool.poetry.dev-dependencies]
mdformat_myst = ""
pre-commit = "^2.20.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
