[tool.poetry]
name = "mekanik-kuantum"
version = "0.1.0"
description = ""
authors = ["Thaza_Kun <61819672+Thaza-Kun@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "scripts"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.0"
# ghp-import = "^2.1.0"
# sphinx-proof = "^0.1.3"
# jupyter-book = "^0.15.1"
seaborn = "^0.12.2"
pandas = "^2.0.2"
ipympl = "^0.9.3"
qmsolve = "^2.0.0"
# mdformat-myst = "^0.1.5"
ipykernel = "^6.23.3"
notebook = "^6.5.4"
nbformat = "^5.9.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
